Consolidated media queries and fixed social media icons on mobile.

--- a/js_app/stylesheets/styles.css
+++ b/js_app/stylesheets/styles.css
@@ -237,12 +237,6 @@ h1 {
   margin: 60px 0 40px;
   padding-bottom: 5px;
 }
-@media only screen and (max-width: 780px) {
-  h1 {
-    font-size: 20px;
-    margin: 20px 0;
-  }
-}
 
 h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
@@ -294,27 +288,12 @@ a:hover {
   padding-right: 10vw;
 }
 
-@media only screen and (max-width: 780px) {
-  .c-header__content {
-    width: 100%;
-  }
-}
-
 .c-header__content__logo {
   height: 40px;
   width: 100px;
   background: url("/static/img/logo.png") center/100px no-repeat;
   background-color: rgb(239, 91, 48);
   padding: 10px 20px;
-}
-
-@media only screen and (max-width: 780px) {
-  .c-header__content__logo {
-    height: 20px;
-    width: 20px;
-    background: url("/static/img/logo_sm.png") center/30px no-repeat;
-    padding: 10px;
-  }
 }
 
 .c-header__social {
@@ -338,12 +317,6 @@ a:hover {
   align-items: center;
   color: #FFF;
   flex-grow: 1;
-}
-
-@media only screen and (max-width: 780px) {
-  .c-player {
-    background-color: rgba(26, 26, 26, 0.5);
-  }
 }
 
 .c-player__button {
@@ -372,23 +345,11 @@ a:hover {
   align-items: center;
 }
 
-@media only screen and (max-width: 780px) {
-  .c-nav {
-    height: 40px;
-  }
-}
-
 .c-nav__item {
   display: flex;
   align-items: center;
   height: 5vh;
   padding: 0 1em;
-}
-
-@media only screen and (max-width: 780px) {
-  .c-nav__item {
-    padding: 0 10px;
-  }
 }
 
 .c-nav__item a, .c-nav__item a:visited {
@@ -403,12 +364,6 @@ a:hover {
   align-items: center;
   height: 5vh;
   padding: 0 1em;
-}
-
-@media only screen and (max-width: 780px) {
-  .c-nav__item--active {
-    padding: 0 10px;
-  }
 }
 
 .c-nav__item--active a, .c-nav__item--active a:visited  {
@@ -433,16 +388,6 @@ a:hover {
   justify-content: space-between;
 }
 
-@media only screen and (max-width: 780px) {
-  .o-content-block {
-    display: flex;
-    margin: 1vh auto;
-    width: 90vw;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-
 .post-module {
   cursor: pointer;
   position: relative;
@@ -462,13 +407,6 @@ a:hover {
   transition: all 0.3s linear 0s;
 }
 
-@media only screen and (max-width: 780px) {
-  .post-module {
-    width: 100%;
-    height: 250px;
-    margin: 1vw 0;
-  }
-}
 .post-module:hover,
 .hover {
   -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
@@ -512,11 +450,6 @@ a:hover {
   -o-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
   transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
 }
-@media only screen and (max-width: 780px) {
-  .post-module .post-content {
-    height: 100%;
-  }
-}
 
 .post-module .post-content .title {
   margin: 0;
@@ -538,14 +471,6 @@ a:hover {
   color: #FFF;
   font-size: 14px;
   line-height: 1.8em;
-}
-
-@media only screen and (max-width: 780px) {
-  .post-module .post-content .description {
-    display: block !important;
-    height: auto !important;
-    opacity: 1 !important;
-  }
 }
 
 .post-module .post-content .post-meta {
@@ -662,12 +587,6 @@ a:hover {
   max-width: 33vw;
 }
 
-@media only screen and (max-width: 780px) {
-  .c-featured-item__container__tagline {
-    max-width: 90vw;
-  }
-}
-
 .swiper-container {
   width: 100%;
   height: 100%;
@@ -700,22 +619,10 @@ a:hover {
   flex-direction: row;
 }
 
-@media only screen and (max-width: 780px) {
-  .c-show {
-    flex-direction: column;
-  }
-}
-
 .c-show__episodes {
   flex-grow: 1;
   flex-basis: 0;
   padding: 2em 3em;
-}
-
-@media only screen and (max-width: 780px) {
-  .c-show__episodes {
-    padding: 2em 0;
-  }
 }
 
 .c-show__sidebar {
@@ -725,23 +632,8 @@ a:hover {
   min-height: calc(100vh - 60px - 4em);
 }
 
-@media only screen and (max-width: 780px) {
-  .c-show__sidebar {
-    width: auto;
-    min-height: initial;
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .c-show__sidebar__image {
   width: 100%;
-}
-
-@media only screen and (max-width: 780px) {
-  .c-show__sidebar__image {
-    max-width: 100%;
-  }
 }
 
 .c-show__sidebar__title {
@@ -819,7 +711,76 @@ a:hover {
 }
 
 @media only screen and (max-width: 780px) {
+  h1 {
+    font-size: 20px;
+    margin: 20px 0;
+  }
+  .c-header__content {
+    width: 100%;
+  }
+  .c-header__content__logo {
+    height: 20px;
+    width: 20px;
+    background: url("/static/img/logo_sm.png") center/30px no-repeat;
+    padding: 10px;
+  }
+  .c-player {
+    background-color: rgba(26, 26, 26, 0.5);
+  }
+  .c-nav {
+    height: 40px;
+  }
+  .c-nav__item {
+    padding: 0 10px;
+  }
+  .c-nav__item--active {
+    padding: 0 10px;
+  }
+  .o-content-block {
+    display: flex;
+    margin: 1vh auto;
+    width: 90vw;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .post-module {
+    width: 100%;
+    height: 250px;
+    margin: 1vw 0;
+  }
+  .post-module .post-content {
+    height: 100%;
+  }
+  .post-module .post-content .description {
+    display: block !important;
+    height: auto !important;
+    opacity: 1 !important;
+  }
+  .c-featured-item__container__tagline {
+    max-width: 90vw;
+  }
+  .c-show {
+    flex-direction: column;
+  }
+  .c-show__episodes {
+    padding: 2em 0;
+  }
+  .c-show__sidebar {
+    width: auto;
+    min-height: initial;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .c-show__sidebar__image {
+    max-width: 100%;
+  }
+
   .u-full-width-mobile {
+    width: 100%;
+  }
+
+  .u-mobile-hidden {
     width: 100%;
   }
 }
